# FreeAiHR

./: README.md  SECURITY.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_auth_license.py  0002_init_resume_jd.py  0003_init_interview.py  0004_init_llm_providers.py  0005_init_email_accounts.py  0006_init_extension_tokens.py  0007_resume_parse_status.py  0008_interview_turn_score_status.py  0009_users_status.py  0010_question_sets.py  0011_interview_remote_invite.py  0012_smtp_accounts.py  0013_resume_job_matches.py  0014_drop_llm_provider_type.py  0015_resume_file_mime_length.py  0016_interview_voice_modality.py  0017_voice_providers.py  0018_drop_extension_tokens.py  0019_question_library.py  0020_audit_score_override.py  0021_org_units.py  0022_jobs_candidates_org.py  (+4 more)
backend/app/: __init__.py  config.py  main.py
backend/tests/: test_audit.py  test_celery_interview.py  test_celery_resume.py  test_email_sync_concurrency.py  test_fingerprint.py  test_healthz.py  test_interview_invite.py  test_interview_voice_fields.py  test_job_governance.py  test_license_editions.py  test_license_lockdown.py  test_license_verifier.py  test_metrics.py  test_org_units.py  test_pagination.py  test_pagination_helpers.py  test_question_sets.py  test_redis_lock.py  test_reports.py  test_resume_job_match.py  test_resume_parser.py  test_security.py  test_smtp.py  test_sso.py  test_storage.py  test_stt_tts_mock.py  test_stt_tts_openai_compatible.py  test_talents.py  test_users.py  test_voice_interview.py  test_voice_provider.py
(+163 files in other folders)
